--- a/ECA/Content/css/style.css
+++ b/ECA/Content/css/style.css
@@ -19,3 +19,34 @@ body {
     height:70px;
 }
      
+
+  /*** Estilos para formularios*/
+
+   /* label color */
+   .input-field label {
+     color: #90a4ae;
+   }
+   /* label focus color */
+   .input-field input[type=text]:focus + label {
+     color: #37474f;
+   }
+   /* label underline focus color */
+   .input-field input[type=text]:focus {
+     border-bottom: 1px solid #01579b;
+     box-shadow: 0 1px 0 0 #01579b;
+   }
+   /* valid color */
+   .input-field input[type=text].valid {
+     border-bottom: 1px solid #01579b;
+     box-shadow: 0 1px 0 0 #01579b;
+   }
+   /* invalid color */
+   .input-field input[type=text].invalid {
+     border-bottom: 1px solid #b71c1c;
+     box-shadow: 0 1px 0 0 #b71c1c;
+   }
+   /* icon prefix focus color */
+   .input-field .prefix.active {
+     color: #37474f;
+   }
+        
