--- a/ECA/Views/Shared/_Footer.cshtml
+++ b/ECA/Views/Shared/_Footer.cshtml
@@ -7,15 +7,15 @@
         <div class="col l4 offset-l2 s12">
             <h5 class="white-text">Links de la semana</h5>
             <ul>
-                <li><a class="orange-text" href="#!">Genbetadev</a></li>
-                <li><a class="orange-text" href="#!">stack overflow</a></li>
-                <li><a class="orange-text" href="#!">platzi.com</a></li>
+                <li><a class="blue-grey-text text-lighten-1" href="#!">Genbetadev</a></li>
+                <li><a class="blue-grey-text text-lighten-1" href="#!">stack overflow</a></li>
+                <li><a class="blue-grey-text text-lighten-1" href="#!">platzi.com</a></li>
             </ul>
         </div>
     </div>
 </div>
 <div class="footer-copyright">
-    <div class="container orange-text">
+    <div class="container blue-grey-text text-lighten-1">
         © 2015 Desarrollado por ennova
     </div>
 </div>
